# drone_trajectory_control

./: .gitignore  README.md
matlab/: gen_traj.asv  gen_traj.m  plot_gen_traj.asv  plot_gen_traj.m  quinticpoly.m  quinticpolynomial.asv  rc_project.asv  rc_project.m
project/: CMakeLists.txt  package.xml
project/scripts/: sliding_mode_control.py  visualize.py
